--- a/CardGameApp/CardGameApp/Base.lproj/Main.storyboard
+++ b/CardGameApp/CardGameApp/Base.lproj/Main.storyboard
@@ -1,24 +1,160 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="L47-IK-Vjn">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="lRN-8c-sgC">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="L47-IK-Vjn" customClass="ViewController" customModule="CardGameApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xSj-e9-vaD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c5a-o9-nQT">
+                                <rect key="frame" x="3" y="20" width="50" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="height" multiplier="1:1.27" id="a1I-su-0gJ"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d30-mt-66U">
+                                <rect key="frame" x="56" y="20" width="50" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="d30-mt-66U" secondAttribute="height" multiplier="1:1.27" id="S01-FL-TVK"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hbs-Sb-XAc">
+                                <rect key="frame" x="109" y="20" width="49.5" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Hbs-Sb-XAc" secondAttribute="height" multiplier="1:1.27" id="9ML-Io-RUQ"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pwZ-rK-F6g">
+                                <rect key="frame" x="161.5" y="20" width="50" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="pwZ-rK-F6g" secondAttribute="height" multiplier="1:1.27" id="KMg-FG-6Bb"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SEG-c7-wz0">
+                                <rect key="frame" x="322" y="20" width="50" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="SEG-c7-wz0" secondAttribute="height" multiplier="1:1.27" id="SnX-GD-2yW"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kso-aH-wKR">
+                                <rect key="frame" x="238.5" y="20" width="50" height="63.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="kso-aH-wKR" secondAttribute="height" multiplier="1:1.27" id="hR4-2X-Uvy"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q1N-lF-j1g">
+                                <rect key="frame" x="3" y="93" width="50" height="574"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1k6-iG-qh1">
+                                <rect key="frame" x="56" y="93" width="50" height="574"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sc3-aC-U3d">
+                                <rect key="frame" x="109" y="93" width="49.5" height="574"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5s3-ba-IMB">
+                                <rect key="frame" x="161.5" y="93" width="50" height="574"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aP8-g9-Fns">
+                                <rect key="frame" x="214.5" y="93.5" width="50" height="573.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vBo-kA-FbL">
+                                <rect key="frame" x="267.5" y="93.5" width="50" height="573.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DTV-is-lkV">
+                                <rect key="frame" x="320.5" y="93" width="50" height="574"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="kso-aH-wKR" firstAttribute="top" secondItem="6Nh-a6-VQj" secondAttribute="top" id="0xw-Lh-CW2"/>
+                            <constraint firstItem="Hbs-Sb-XAc" firstAttribute="top" secondItem="6Nh-a6-VQj" secondAttribute="top" id="2eC-90-OPQ"/>
+                            <constraint firstItem="DTV-is-lkV" firstAttribute="top" secondItem="SEG-c7-wz0" secondAttribute="bottom" constant="10" id="2wn-SF-YZC"/>
+                            <constraint firstItem="pwZ-rK-F6g" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="5s6-Fd-4or"/>
+                            <constraint firstItem="Q1N-lF-j1g" firstAttribute="leading" secondItem="6Nh-a6-VQj" secondAttribute="leading" constant="3" id="7DP-E1-1c9"/>
+                            <constraint firstItem="kso-aH-wKR" firstAttribute="leading" secondItem="pwZ-rK-F6g" secondAttribute="trailing" constant="27" id="7qB-Gv-UcG"/>
+                            <constraint firstItem="Sc3-aC-U3d" firstAttribute="top" secondItem="Hbs-Sb-XAc" secondAttribute="bottom" constant="10" id="7zK-eU-196"/>
+                            <constraint firstItem="DTV-is-lkV" firstAttribute="leading" secondItem="vBo-kA-FbL" secondAttribute="trailing" constant="3" id="Cm6-eH-QkB"/>
+                            <constraint firstItem="Sc3-aC-U3d" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="DXy-OR-SAe"/>
+                            <constraint firstItem="6Nh-a6-VQj" firstAttribute="bottom" secondItem="aP8-g9-Fns" secondAttribute="bottom" id="F6U-q7-cSN"/>
+                            <constraint firstItem="pwZ-rK-F6g" firstAttribute="leading" secondItem="Hbs-Sb-XAc" secondAttribute="trailing" constant="3" id="Fcx-2v-ath"/>
+                            <constraint firstItem="vBo-kA-FbL" firstAttribute="leading" secondItem="aP8-g9-Fns" secondAttribute="trailing" constant="3" id="GRD-9V-PjC"/>
+                            <constraint firstItem="aP8-g9-Fns" firstAttribute="top" secondItem="kso-aH-wKR" secondAttribute="bottom" constant="10" id="H51-0f-M1h"/>
+                            <constraint firstItem="6Nh-a6-VQj" firstAttribute="bottom" secondItem="Q1N-lF-j1g" secondAttribute="bottom" id="HkF-EI-N7I"/>
+                            <constraint firstItem="aP8-g9-Fns" firstAttribute="leading" secondItem="5s3-ba-IMB" secondAttribute="trailing" constant="3" id="JL5-Ts-iRt"/>
+                            <constraint firstItem="Q1N-lF-j1g" firstAttribute="top" secondItem="c5a-o9-nQT" secondAttribute="bottom" constant="10" id="LbH-xk-iAX"/>
+                            <constraint firstItem="5s3-ba-IMB" firstAttribute="leading" secondItem="Sc3-aC-U3d" secondAttribute="trailing" constant="3" id="Le8-4j-MTX"/>
+                            <constraint firstItem="SEG-c7-wz0" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="NI6-1c-SXw"/>
+                            <constraint firstItem="6Nh-a6-VQj" firstAttribute="bottom" secondItem="vBo-kA-FbL" secondAttribute="bottom" id="PlG-pg-edW"/>
+                            <constraint firstItem="Hbs-Sb-XAc" firstAttribute="leading" secondItem="d30-mt-66U" secondAttribute="trailing" constant="3" id="QY2-ZF-IDN"/>
+                            <constraint firstItem="1k6-iG-qh1" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="RBX-Wk-ryG"/>
+                            <constraint firstItem="d30-mt-66U" firstAttribute="leading" secondItem="c5a-o9-nQT" secondAttribute="trailing" constant="3" id="UZB-Pj-NEk"/>
+                            <constraint firstItem="1k6-iG-qh1" firstAttribute="leading" secondItem="Q1N-lF-j1g" secondAttribute="trailing" constant="3" id="Ufh-21-Ouj"/>
+                            <constraint firstItem="Q1N-lF-j1g" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="VZH-DA-UUu"/>
+                            <constraint firstItem="6Nh-a6-VQj" firstAttribute="bottom" secondItem="5s3-ba-IMB" secondAttribute="bottom" id="WfA-tA-32s"/>
+                            <constraint firstItem="6Nh-a6-VQj" firstAttribute="trailing" secondItem="SEG-c7-wz0" secondAttribute="trailing" constant="3" id="YB3-AJ-oMw"/>
+                            <constraint firstItem="SEG-c7-wz0" firstAttribute="top" secondItem="6Nh-a6-VQj" secondAttribute="top" id="ZOj-rV-8yS"/>
+                            <constraint firstItem="vBo-kA-FbL" firstAttribute="top" secondItem="kso-aH-wKR" secondAttribute="bottom" constant="10" id="ZXh-C9-8BM"/>
+                            <constraint firstItem="vBo-kA-FbL" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="djB-ft-NQA"/>
+                            <constraint firstItem="c5a-o9-nQT" firstAttribute="leading" secondItem="6Nh-a6-VQj" secondAttribute="leading" constant="3" id="ewF-60-Sx3"/>
+                            <constraint firstItem="5s3-ba-IMB" firstAttribute="top" secondItem="pwZ-rK-F6g" secondAttribute="bottom" constant="10" id="fSJ-wX-qaZ"/>
+                            <constraint firstItem="c5a-o9-nQT" firstAttribute="top" secondItem="6Nh-a6-VQj" secondAttribute="top" id="gi8-jN-JqG"/>
+                            <constraint firstItem="1k6-iG-qh1" firstAttribute="top" secondItem="d30-mt-66U" secondAttribute="bottom" constant="10" id="hJt-Xj-hsE"/>
+                            <constraint firstItem="6Nh-a6-VQj" firstAttribute="bottom" secondItem="DTV-is-lkV" secondAttribute="bottom" id="i7x-ka-wZ8"/>
+                            <constraint firstItem="6Nh-a6-VQj" firstAttribute="bottom" secondItem="Sc3-aC-U3d" secondAttribute="bottom" id="iA3-Z7-xh0"/>
+                            <constraint firstItem="pwZ-rK-F6g" firstAttribute="top" secondItem="6Nh-a6-VQj" secondAttribute="top" id="jFh-bN-Zk0"/>
+                            <constraint firstItem="c5a-o9-nQT" firstAttribute="width" secondItem="xSj-e9-vaD" secondAttribute="width" multiplier="1:7.5" id="kEw-yM-njj"/>
+                            <constraint firstItem="d30-mt-66U" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="lBY-cn-Rdp"/>
+                            <constraint firstItem="Hbs-Sb-XAc" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="oVA-cR-h2B"/>
+                            <constraint firstItem="5s3-ba-IMB" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="ops-Be-iXl"/>
+                            <constraint firstItem="kso-aH-wKR" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="qCY-4t-588"/>
+                            <constraint firstItem="aP8-g9-Fns" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="qu3-BM-Mnu"/>
+                            <constraint firstItem="DTV-is-lkV" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="r49-JA-Wg2"/>
+                            <constraint firstItem="Sc3-aC-U3d" firstAttribute="leading" secondItem="1k6-iG-qh1" secondAttribute="trailing" constant="3" id="vMz-Ry-Dvw"/>
+                            <constraint firstItem="d30-mt-66U" firstAttribute="top" secondItem="6Nh-a6-VQj" secondAttribute="top" id="xjj-EC-1Go"/>
+                            <constraint firstItem="6Nh-a6-VQj" firstAttribute="bottom" secondItem="1k6-iG-qh1" secondAttribute="bottom" id="xtq-mj-wE5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6Nh-a6-VQj"/>
                     </view>
+                    <connections>
+                        <outlet property="backCardView" destination="SEG-c7-wz0" id="PfM-ab-mli"/>
+                        <outlet property="showCardView" destination="kso-aH-wKR" id="K5r-mI-00a"/>
+                        <outletCollection property="topCardsView" destination="c5a-o9-nQT" collectionClass="NSMutableArray" id="gha-bn-AJV"/>
+                        <outletCollection property="topCardsView" destination="d30-mt-66U" collectionClass="NSMutableArray" id="xTt-Xn-JEI"/>
+                        <outletCollection property="topCardsView" destination="Hbs-Sb-XAc" collectionClass="NSMutableArray" id="DSQ-ZZ-Awt"/>
+                        <outletCollection property="topCardsView" destination="pwZ-rK-F6g" collectionClass="NSMutableArray" id="6g4-5b-SQk"/>
+                        <outletCollection property="cardStackViews" destination="Q1N-lF-j1g" collectionClass="NSMutableArray" id="BHD-SU-56V"/>
+                        <outletCollection property="cardStackViews" destination="1k6-iG-qh1" collectionClass="NSMutableArray" id="jPB-vp-ZJH"/>
+                        <outletCollection property="cardStackViews" destination="Sc3-aC-U3d" collectionClass="NSMutableArray" id="ErK-DG-Y68"/>
+                        <outletCollection property="cardStackViews" destination="5s3-ba-IMB" collectionClass="NSMutableArray" id="B60-IO-G9D"/>
+                        <outletCollection property="cardStackViews" destination="aP8-g9-Fns" collectionClass="NSMutableArray" id="0ug-He-OYI"/>
+                        <outletCollection property="cardStackViews" destination="vBo-kA-FbL" collectionClass="NSMutableArray" id="aAC-xe-78r"/>
+                        <outletCollection property="cardStackViews" destination="DTV-is-lkV" collectionClass="NSMutableArray" id="ruG-Op-w91"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kMV-SJ-7UR" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
