--- a/CardGameApp/CardGameApp/Base.lproj/Main.storyboard
+++ b/CardGameApp/CardGameApp/Base.lproj/Main.storyboard
@@ -21,67 +21,67 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c5a-o9-nQT">
-                                <rect key="frame" x="3" y="20" width="50" height="63"/>
+                                <rect key="frame" x="3" y="20" width="50" height="63.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="height" multiplier="1:1.27" id="a1I-su-0gJ"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d30-mt-66U">
-                                <rect key="frame" x="56" y="20" width="50" height="63"/>
+                                <rect key="frame" x="56" y="20" width="50" height="63.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="d30-mt-66U" secondAttribute="height" multiplier="1:1.27" id="S01-FL-TVK"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hbs-Sb-XAc">
-                                <rect key="frame" x="109" y="20" width="49.5" height="63"/>
+                                <rect key="frame" x="109" y="20" width="49.5" height="62"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Hbs-Sb-XAc" secondAttribute="height" multiplier="1:1.27" id="9ML-Io-RUQ"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pwZ-rK-F6g">
-                                <rect key="frame" x="161.5" y="20" width="50" height="63"/>
+                                <rect key="frame" x="161.5" y="20" width="50" height="63.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="pwZ-rK-F6g" secondAttribute="height" multiplier="1:1.27" id="KMg-FG-6Bb"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SEG-c7-wz0">
-                                <rect key="frame" x="322" y="20" width="50" height="63"/>
+                                <rect key="frame" x="322" y="20" width="50" height="63.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="SEG-c7-wz0" secondAttribute="height" multiplier="1:1.27" id="SnX-GD-2yW"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kso-aH-wKR">
-                                <rect key="frame" x="238.5" y="20" width="50" height="63.5"/>
+                                <rect key="frame" x="238.5" y="20" width="50" height="62.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="kso-aH-wKR" secondAttribute="height" multiplier="1:1.27" id="hR4-2X-Uvy"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q1N-lF-j1g">
-                                <rect key="frame" x="3" y="93" width="50" height="574"/>
+                                <rect key="frame" x="3" y="93.5" width="50" height="573.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1k6-iG-qh1">
-                                <rect key="frame" x="56" y="93" width="50" height="574"/>
+                                <rect key="frame" x="56" y="93.5" width="50" height="573.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sc3-aC-U3d">
-                                <rect key="frame" x="109" y="93" width="49.5" height="574"/>
+                                <rect key="frame" x="109" y="92" width="49.5" height="575"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5s3-ba-IMB">
-                                <rect key="frame" x="161.5" y="93" width="50" height="574"/>
+                                <rect key="frame" x="161.5" y="93.5" width="50" height="573.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aP8-g9-Fns">
-                                <rect key="frame" x="214.5" y="93.5" width="50" height="573.5"/>
+                                <rect key="frame" x="214.5" y="92.5" width="50" height="574.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vBo-kA-FbL">
-                                <rect key="frame" x="267.5" y="93.5" width="50" height="573.5"/>
+                                <rect key="frame" x="267.5" y="92.5" width="50" height="574.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DTV-is-lkV">
-                                <rect key="frame" x="320.5" y="93" width="50" height="574"/>
+                                <rect key="frame" x="320.5" y="93.5" width="50" height="573.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -123,7 +123,7 @@
                             <constraint firstItem="6Nh-a6-VQj" firstAttribute="bottom" secondItem="DTV-is-lkV" secondAttribute="bottom" id="i7x-ka-wZ8"/>
                             <constraint firstItem="6Nh-a6-VQj" firstAttribute="bottom" secondItem="Sc3-aC-U3d" secondAttribute="bottom" id="iA3-Z7-xh0"/>
                             <constraint firstItem="pwZ-rK-F6g" firstAttribute="top" secondItem="6Nh-a6-VQj" secondAttribute="top" id="jFh-bN-Zk0"/>
-                            <constraint firstItem="c5a-o9-nQT" firstAttribute="width" secondItem="xSj-e9-vaD" secondAttribute="width" multiplier="1:7.5" id="kEw-yM-njj"/>
+                            <constraint firstItem="c5a-o9-nQT" firstAttribute="width" secondItem="xSj-e9-vaD" secondAttribute="width" multiplier="1:7.45" id="kEw-yM-njj"/>
                             <constraint firstItem="d30-mt-66U" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="lBY-cn-Rdp"/>
                             <constraint firstItem="Hbs-Sb-XAc" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="oVA-cR-h2B"/>
                             <constraint firstItem="5s3-ba-IMB" firstAttribute="width" secondItem="c5a-o9-nQT" secondAttribute="width" id="ops-Be-iXl"/>
@@ -137,12 +137,8 @@
                         <viewLayoutGuide key="safeArea" id="6Nh-a6-VQj"/>
                     </view>
                     <connections>
-                        <outlet property="backCardView" destination="SEG-c7-wz0" id="PfM-ab-mli"/>
-                        <outlet property="showCardView" destination="kso-aH-wKR" id="K5r-mI-00a"/>
-                        <outletCollection property="topCardsView" destination="c5a-o9-nQT" collectionClass="NSMutableArray" id="gha-bn-AJV"/>
-                        <outletCollection property="topCardsView" destination="d30-mt-66U" collectionClass="NSMutableArray" id="xTt-Xn-JEI"/>
-                        <outletCollection property="topCardsView" destination="Hbs-Sb-XAc" collectionClass="NSMutableArray" id="DSQ-ZZ-Awt"/>
-                        <outletCollection property="topCardsView" destination="pwZ-rK-F6g" collectionClass="NSMutableArray" id="6g4-5b-SQk"/>
+                        <outlet property="backCardView" destination="SEG-c7-wz0" id="d9f-jC-zgB"/>
+                        <outlet property="showCardView" destination="kso-aH-wKR" id="qqN-k1-vQq"/>
                         <outletCollection property="cardStackViews" destination="Q1N-lF-j1g" collectionClass="NSMutableArray" id="BHD-SU-56V"/>
                         <outletCollection property="cardStackViews" destination="1k6-iG-qh1" collectionClass="NSMutableArray" id="jPB-vp-ZJH"/>
                         <outletCollection property="cardStackViews" destination="Sc3-aC-U3d" collectionClass="NSMutableArray" id="ErK-DG-Y68"/>
@@ -150,6 +146,10 @@
                         <outletCollection property="cardStackViews" destination="aP8-g9-Fns" collectionClass="NSMutableArray" id="0ug-He-OYI"/>
                         <outletCollection property="cardStackViews" destination="vBo-kA-FbL" collectionClass="NSMutableArray" id="aAC-xe-78r"/>
                         <outletCollection property="cardStackViews" destination="DTV-is-lkV" collectionClass="NSMutableArray" id="ruG-Op-w91"/>
+                        <outletCollection property="topCardsViews" destination="c5a-o9-nQT" collectionClass="NSMutableArray" id="B3y-4Y-QkM"/>
+                        <outletCollection property="topCardsViews" destination="d30-mt-66U" collectionClass="NSMutableArray" id="uVd-WV-HHj"/>
+                        <outletCollection property="topCardsViews" destination="Hbs-Sb-XAc" collectionClass="NSMutableArray" id="azv-2r-d5z"/>
+                        <outletCollection property="topCardsViews" destination="pwZ-rK-F6g" collectionClass="NSMutableArray" id="QtK-yp-IjN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kMV-SJ-7UR" sceneMemberID="firstResponder"/>
