--- a/CardGameApp/CardGameApp/Base.lproj/Main.storyboard
+++ b/CardGameApp/CardGameApp/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="jIU-P4-hls" firstAttribute="top" secondItem="GWl-Jv-Kdf" secondAttribute="bottom" constant="7.5" id="4ee-hG-AHd"/>
                             <constraint firstItem="LNd-Bh-3Lq" firstAttribute="top" secondItem="GWl-Jv-Kdf" secondAttribute="top" id="5Ea-7K-reB"/>
